# api/src/search/dto/search-result.dto.ts
@@ -1,0 +1,16 @@
+import { Expose, Type } from "class-transformer";
+import { IsArray } from "class-validator";
+import { SearchPhysiotherapistDto } from "./search-physiotherapist.dto";
+import { SearchCourseDto } from "./search-course.dto";
+
+export class SearchResult {
+  @IsArray()
+  @Type(() => SearchPhysiotherapistDto)
+  @Expose()
+  physiotherapists: SearchPhysiotherapistDto[];
+
+  @IsArray()
+  @Type(() => SearchCourseDto)
+  @Expose()
+  courses: SearchCourseDto[];
+}
